# rss-reader

./: .dockerignore  .gitignore  .rgignore  .windsurfrules  DEVELOPMENT.md  Dockerfile  FLOWS.md  IDEALOG.md  InoReader-2025-01-12.xml  PLAN.md  README.md  SPEC.md  TODO.md  chuck.db  client.ts  cron.txt  db.sqlite3  deno.json  docker-entrypoint.sh  feed.xml  fly.toml  main.ts  manage.py  mprocs.yaml  pyproject.toml  reset-db.nu  sample-feeds.xml  test_date.py  todo.md  utils.ts  uwsgi.ini  vite.config.ts
.config/: dotnet-tools.json
RssReader/: Blog.cs  ChuckContext.cs  Feed.cs  Migration.cs  Post.cs  Program.cs  RssReader.csproj  appsettings.Development.json  rss-reader.db-shm  rss-reader.db-wal
client/: auth.ts
dev-cache/: 0.xml  10.xml  11.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  3.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  42.xml  43.xml  44.xml  45.xml  46.xml  47.xml  48.xml  49.xml  5.xml  (+24 more)
frontend/: package-lock.json  package.json
islands/: Article.tsx  ServiceWorker.tsx  Sync.tsx  SyncBlogButton.tsx
old/: Dockerfile  README.md  TODO.md  fly.toml  sample-feeds.xml  uwsgi.ini
routes/: _app.tsx  blogs.tsx  import.tsx  index.tsx
rss_reader/: __main__.py  app.py  asgi.py  auth.py  date.py  db.py  import.py  migrate.py  models.py  settings.py  sync.py  urls.py  wsgi.py
scripts/: import-sample.ts
server/: define.ts  import.ts  sync.ts
src/: client.ts  crons.ts  main.crons.ts  main.server.ts  main.ts
static/: manifest.json  service-worker.js
tests/: date.test.ts  (+2 more)
(+123 files in other folders)
