[project]
name = "rss_reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "defusedxml>=0.7.1",
  "flask>=3.0.3",
  "requests>=2.32.3",
  "uwsgi>=2.0.28",
]
[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff.lint]
fixable = []

[tool.ruff.format]
