[project]
name = "rss_reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
  "defusedxml>=0.7.1",
  "django>=5.2",
  "flask>=3.0.3",
  "flask-login>=0.6.3",
  "requests>=2.32.3",
  "uwsgi>=2.0.28",
  "werkzeug>=3.0.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pyright>=1.1.398", "ruff>=0.11.4"]

[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff.lint]
fixable = []

[tool.ruff.format]

[tool.pyright]
venvPath = "."
venv = ".venv"
